alias(
    name = "clang_rt.builtins.static",
    actual = "@compiler-rt//:clang_rt.builtins.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.ubsan.static",
    actual = "@compiler-rt//:ubsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.msan.static",
    actual = "@compiler-rt//:msan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan.static",
    actual = "@compiler-rt//:asan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan_static.static",
    actual = "@compiler-rt//:asan_static.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan_cxx.static",
    actual = "@compiler-rt//:asan_cxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan.shared",
    actual = "@compiler-rt//:asan.shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.crtbegin",
    actual = "@compiler-rt//:clang_rt.crtbegin.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.crtend",
    actual = "@compiler-rt//:clang_rt.crtend.static",
    visibility = ["//visibility:public"],
)
