load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# This package is only used to re-export targets from the external cosmo_libc
# repository populated by the module extension.

exports_files(["locale_stubs.c"])

alias(
    name = "cosmo_libc",
    actual = "@cosmo_libc//:cosmo_libc",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmopolitan",
    actual = "@cosmo_libc//:cosmopolitan",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_headers",
    actual = "@cosmo_libc//:cosmo_headers",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_crt.object",
    actual = "@cosmo_libc//:cosmo_crt.object",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_crt1.object",
    actual = "@cosmo_libc//:cosmo_crt1.object",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_rcrt1.object",
    actual = "@cosmo_libc//:cosmo_rcrt1.object",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_Scrt1.object",
    actual = "@cosmo_libc//:cosmo_Scrt1.object",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_library_search_directory",
    actual = "@cosmo_libc//:cosmo_library_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_headers_include_search_directory",
    actual = "@cosmo_libc//:cosmo_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "cosmo_tzdata_directory",
    actual = "@cosmo_libc//:cosmo_tzdata_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.builtins.static",
    actual = "@cosmo_libc//:clang_rt.builtins.static",
    visibility = ["//visibility:public"],
)
