load("@bazel_lib//lib:copy_file.bzl", "copy_file")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//toolchain/stage2:cc_stage2_import.bzl", "cc_stage2_import")

exports_files([
    "libcxx_library_search_directory/libc++.a",
    "libcxx_library_search_directory/libc++abi.a",
])

copy_file(
    name = "libc++",
    src = "@libcxx//:libcxx.static",
    out = "libc++.a",
    visibility = ["//visibility:public"],
)

copy_file(
    name = "libc++abi",
    src = "@libcxxabi//:libcxxabi.static",
    out = "libc++abi.a",
    visibility = ["//visibility:public"],
)

copy_to_directory(
    name = "libcxx_library_search_directory",
    srcs = [
        ":libc++",
        ":libc++abi",
    ],
    visibility = ["//visibility:public"],
)

cc_stage2_import(
    name = "libcxx_static",
    static_library = "@libcxx//:libcxx.static",
    visibility = ["//visibility:public"],
)

cc_stage2_import(
    name = "libcxxabi_static",
    static_library = "@libcxxabi//:libcxxabi.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxx_headers_include_search_directory",
    actual = "@libcxx//:libcxx_headers_include_search_directory",
    visibility = ["//visibility:public"],
)

alias(
    name = "libcxxabi_headers_include_search_directory",
    actual = "@libcxxabi//:libcxxabi_headers_include_search_directory",
    visibility = ["//visibility:public"],
)
