load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

copy_to_directory(
    name = "msvc_import_libraries_directory",
    srcs = select({
        "@platforms//cpu:x86_64": ["@windows_sdk_x64//:libs"],
        "@platforms//cpu:aarch64": ["@windows_sdk_arm64//:libs"],
    }),
    visibility = ["//visibility:public"],
)
